--- a/angular.json
+++ b/angular.json
@@ -30,6 +30,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/dist/css/bootstrap.min.css",
               "src/styles.scss"
             ],
             "scripts": []
